Use a simpler method calls.